common-applications/test-environment/opengauss-playground-frontend-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-playground-frontend-test
  name: opengauss-playground-frontend-test
